# saas-fulkruma

./: .depllo-ci.yml  CLAUDE.md  README.md  SETUP.md  docs-screenshots.json
.github/workflows/: ci-cd.yml  ci.yml
backend/: .env.example  package-lock.json  package.json  vitest.config.ts
backend/prisma/: schema.prisma  seed.ts
backend/scripts/: mint-platform-key.ts
backend/src/: auth-config.ts  index.ts
backend/src/__tests__/: admin-crm.test.ts  admin-guard.test.ts  admin-partner.test.ts  auth-gates.test.ts  health.test.ts  (+1 more)
cli/: package-lock.json  package.json
cli/src/: index.ts
copy/docs/: concepts.md  index.md  installation.md  portal.md  quickstart.md
deploy/: bootstrap-droplet.sh
deploy/nginx/: fulkruma.conf  staging-fulkruma.forjio.com.conf
e2e/: .gitignore  package-lock.json  package.json  playwright.config.ts  playwright.visual.config.ts
e2e/tests/: auth.spec.ts  dashboard.spec.ts  health.spec.ts  visual.spec.ts
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/scripts/: gen-version.mjs
scripts/: bootstrap.sh  dev-bootstrap.sh  sync-sdk-mirrors.sh
sdk/go/: CHANGELOG.md  README.md  client.go  client_test.go  errors.go  go.mod  resources.go  types.go  webhooks.go  webhooks_test.go
sdk/node/: CHANGELOG.md  LICENSE  forjio-fulkruma-node-0.1.0.tgz  package-lock.json  package.json  tsconfig.json  tsup.config.ts
sdk/python/: CHANGELOG.md  README.md  pyproject.toml
sdk/python/fulkruma/: __init__.py  client.py  errors.py  resources.py  webhooks.py
sdk/python/tests/: test_client.py
(+252 files in other folders)
